hphp/hack/test/typecheck/const_collections_cant_unset.php.exp
File "const_collections_cant_unset.php", line 8, characters 11-19:
You cannot use this syntax in an `unset()` expression. (Parsing[1002])
